--- a/snippets/linklist-navlink.liquid
+++ b/snippets/linklist-navlink.liquid
@@ -1,18 +1,12 @@
-{% assign show_levels = levels | default: 3 %}
-
-<ul class="nav flex-column">
-  {% for link_lv1 in list.links %}
-    <li class="nav-item">
-      <a class="nav-link" aria-current="page" href="{{ link_lv1.url }}">{{ link_lv1.title }}</a>
-      {% if link_lv1.links.size > 0 and show_levels > 0 %}
-        <ul class="nav flex-column ms-3">
-          {% for link_lv2 in link_lv1.links %}
-            <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="{{ link_lv2.url }}">{{ link_lv2.title }}</a>
-            </li>
-          {% endfor %}
-        </ul>
-      {% endif %}
-    </li>
-  {% endfor %}
-  </ul>
+<nav class="xx-linklist-flush nav flex-column">
+{% for link_lv1 in list.links %}
+  <h5><a class="xx-linklist-flush__header-link" href="{{ link_lv1.url }}">{{ link_lv1.title }}</a></h5>
+  {% if link_lv1.links.size > 0 %}
+    <div class="list-group list-group-flush mb-5">
+    {% for link_lv2 in link_lv1.links %}
+      <a class="xx-linklist-flush__item-link list-group-item" href="{{ link_lv2.url }}">{{ link_lv2.title }}</a>
+    {% endfor %}
+    </div>
+  {% endif %}
+{% endfor %}
+</nav>
