--- a/templates/customers/reset_password.liquid
+++ b/templates/customers/reset_password.liquid
@@ -9,17 +9,12 @@
 
       <div class="mb-3">
         <label for="password">Password</label>
-        <input type="password" value="" name="customer[password]" size="16" />
+        <input type="password" value="" name="customer[password]" size="16" required="required" />
       </div>
 
       <div class="mb-3">
         <label for="password_confirmation">Password Confirmation</label>
-        <input
-          type="password"
-          value=""
-          name="customer[password_confirmation]"
-          size="16"
-        />
+        <input type="password" value="" name="customer[password_confirmation]" size="16" required="required" />
       </div>
 
       <div class="d-grid gap-2">
