--- a/templates/customers/register.liquid
+++ b/templates/customers/register.liquid
@@ -3,7 +3,7 @@
   <div class="row">
     <div class="col-sm-6 offset-sm-3 col-lg-4 offset-lg-4">
 
-      <h2>Create Account</h2>
+      <h2 class="text-center my-5">Create Account</h2>
 
       {% form 'create_customer' %}
 
@@ -35,12 +35,12 @@
 
       <div class="mb-3">
         <label for="email" class="form-label">Email Address</label>
-        <input type="email" class="form-control" value="" name="customer[email]" size="30" />
+        <input type="email" class="form-control" value="" name="customer[email]" size="30" required="required" />
       </div>
 
       <div class="mb-3">
         <label for="password" class="form-label">Password</label>
-        <input type="password" class="form-control" value="" name="customer[password]" size="30" />
+        <input type="password" class="form-control" value="" name="customer[password]" size="30" required="required" />
       </div>
 
       <div class="d-grid gap-2">
