--- a/snippets/account-nav.liquid
+++ b/snippets/account-nav.liquid
@@ -1,1 +1,1 @@
-<p><a href="{{ routes.root_url }}">Home</a> / <a href="{{ routes.account_url }}">Account</a> /{{ str }}</p>
+<p><a href="{{ routes.root_url }}">{{ 'layout.breadcrumbs.home_link' | t }}</a> / <a href="{{ routes.account_url }}">{{ 'layout.breadcrumbs.account_link' | t }}</a> /{{ str }}</p>
