--- a/snippets/cart-summary.liquid
+++ b/snippets/cart-summary.liquid
@@ -2,17 +2,17 @@
 
   <div class="cart__summary">
     <dl class="row">
-      <dt class="col-6">Subtotal{% if cart.taxes_included %} incl. taxes{% endif %}</dt>
+      <dt class="col-6">{{ 'layout.cart.summary_subtotal' | t }}{% if cart.taxes_included %} {{ 'layout.cart.includes_taxes' | t }}{% endif %}</dt>
       <dd class="cart__subtotal col-6 text-end">{{ cart.total_price | money_without_trailing_zeros }}</dd>
 
-      <dt class="col-6">Shipping</dt>
-      <dd class="col-6 text-end">calculated at checkout</dd>
+      <dt class="col-6">{{ 'layout.cart.summary_shipping' | t }}</dt>
+      <dd class="col-6 text-end">{{ 'layout.cart.calculated_at_checkout' | t }}</dd>
     </dl>
   </div>
 
   <div class="cart__cta mb-3">
     <div class="d-grid gap-2">
-      <button type="submit" class="btn btn-primary btn-lg" name="checkout">Checkout</button>
+      <button type="submit" class="btn btn-primary btn-lg" name="checkout">{{ 'layout.cart.checkout_button' | t }}</button>
     </div>
   </div>
 
@@ -27,7 +27,7 @@
 
 {% else %}
 
-<p>Your cart is empty. Check out these links to get started:</p>
+<p>{{ 'layout.cart.empty_cart' | t }}</p>
 
 {% render 'linklist-navlink', list: linklists.main-menu, levels: 0 %}
 
