--- a/snippets/cookiebot.liquid
+++ b/snippets/cookiebot.liquid
@@ -1,4 +1,4 @@
-<script id="Cookiebot" src="https://consent.cookiebot.com/uc.js" data-cbid="00000000-0000-0000-0000-000000000000" type="text/javascript" async></script>
+<script id="Cookiebot" src="https://consent.cookiebot.com/uc.js" data-cbid="{{ settings.cookiebot_id }}" type="text/javascript" async></script>
 <script>
   window.addEventListener("CookiebotOnConsentReady", function() {
     var c = Cookiebot.consent,
