--- a/snippets/json-ld-product.liquid
+++ b/snippets/json-ld-product.liquid
@@ -132,7 +132,7 @@ or change the format of some info
   "itemListElement": [{
       "@type": "ListItem",
       "position": 1,
-      "name": {{ 'general.breadcrumb.home' | t | json }},
+      "name": {{ 'layout.breadcrumbs.home_link' | t | json }},
       "item": "{{ shop.url }}"
     }
 
