--- a/sections/image-panel.liquid
+++ b/sections/image-panel.liquid
@@ -1,4 +1,4 @@
-<div class="">
+<div class="{% unless section.settings.full_width %}container{% endunless %}">
   <div class="row gx-0">
     <div class="col-sm">
       <picture>
@@ -9,7 +9,7 @@
     <div class="col-sm{% if section.settings.image_align == 'right' %} order-sm-first{% endif %}">
       <div class="col-10 col-sm-8 offset-1 offset-sm-2 h-100 py-5 text-center d-flex flex-column justify-content-center align-items-center">
         <h2 class="display-4">{{ section.settings.headline }}</h2>
-        {% if section.settings.subline %}<p class="mb-3">{{ section.settings.subline }}</p>{% endif %}
+        {% if section.settings.description %}<p class="mb-3">{{ section.settings.description }}</p>{% endif %}
         {% if section.settings.cta_url %}<a class="btn btn-primary" href="{{ section.settings.cta_url }}">{{ section.settings.cta_label }}</a>{% endif %}
       </div>
     </div>
@@ -39,14 +39,19 @@
       "label": "Image alignment"
     },
     {
+      "id": "full_width",
+      "type": "checkbox",
+      "label": "Full Width"
+    },
+    {
       "id": "headline",
       "type": "text",
       "label": "Headline"
     },
     {
-      "id": "subline",
+      "id": "description",
       "type": "text",
-      "label": "Subline"
+      "label": "Description"
     },
     {
       "id": "cta_label",
