--- a/templates/404.liquid
+++ b/templates/404.liquid
@@ -1,4 +1,22 @@
 <div class="container">
-  <h1>{{ 'general.404.title' | t }}</h1>
-  <p>{{ 'general.404.subtext_html' | t }}</p>
+  <h1 class="text-center my-5">{{ 'general.404.title' | t }}</h1>
+
+  <p class="text-center mb-5">{{ 'general.404.subtext_html' | t }}</p>
+  <p class="text-center">Try one of our main sections</p>
+
+  <p class="text-center mb-5">
+  {% for link_lv1 in linklists.main-menu.links %}
+    <a class="btn btn-outline-secondary" href="{{ link_lv1.url }}">{{ link_lv1.title }}</a>
+  {% endfor %}
+  </p>
+
+  <p class="text-center">Try searching for a phrase</p>
+
+  <form class="col-sm-6 offset-sm-3" action="/search" method="get" role="search">
+    <div class="input-group">
+      <input class="form-control form-control-lg" type="search" name="q" value="{{ search.terms | escape }}">
+      <button class="btn btn-primary" type="submit">search</button>
+    </div>
+  </form>
+
 </div>
