--- a/templates/search.liquid
+++ b/templates/search.liquid
@@ -1,7 +1,9 @@
 <div class="container">
 
-  <form action="/search" method="get" role="search">
-    <div class="input-group mb-3">
+  <h2 class="text-center my-5">Search</h2>
+
+  <form class="my-5" action="/search" method="get" role="search">
+    <div class="input-group">
       <input class="form-control form-control-lg" type="search" name="q" value="{{ search.terms | escape }}">
       <button class="btn btn-primary" type="submit">search</button>
     </div>
